--- a/Grundrechenarten.html
+++ b/Grundrechenarten.html
@@ -21,7 +21,7 @@ Wir nutzen nacheinander alle vier Grundrechenarten.
 	var zahl_2 	=  prompt ( "Bitte Zahl 2 eingeben" ) * 1;
 	
 	
- if (zahl_zwei = 0) 
+ if (zahl_2 == 0) 
  
  {
     alert ("Ich habe dich gewarnt!");
@@ -48,7 +48,7 @@ Wir nutzen nacheinander alle vier Grundrechenarten.
 	
 	// Ausgabe Fehlermeldung bei Division durch Null, ansonsten Ausgabe Ergebnis Division
 	
- if (zahl_zwei == "0") 
+ if (zahl_2 == 0) 
  
  {
     alert (" +++ ACHTUNG +++ Deine Null-Division hat gerade den Alarm für Mathematik-Notsituationen ausgelöst (Notfallcode: 404)  Die Mathe-Polizei ist auf dem direkten Weg zu dir. Bitte bleibe wo du bist und warte auf Rettung! (Viel Glück)")
